0504 bind_delegate, effect

--- a/web/index.html
+++ b/web/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -14,10 +13,18 @@
             padding: 5px;
             overflow: auto;
         }
+        img {
+            width: 100px;
+            height: 100px;
+
+        }
     </style>
+
 </head>
 <body>
-<h1>Simple is Best</h1>
+<img src="./images/파댕이_마자마자.gif">
+<img src="./images/파댕이_물어보신분.gif">
+<img src="./images/파댕이_우왕.gif">
 <div>
     <h1>0423</h1>
     <ul>
@@ -89,7 +96,17 @@
         <li><a href="/jqpro/0501/img_dblclick.html">img_dblclick</a></li>
         <li><a href="/jqpro/0501/기본이벤트막기.html">기본이벤트막기</a></li>
         <li><a href="/jqpro/0501/버블링금지.html">버블링금지</a></li>
+    </ul>
+</div>
 
+<div>
+    <h1>0504</h1>
+    <ul>
+        <li><a href="./0504/animation.html">animation</a></li>
+        <li><a href="./0504/effect.html">effect</a></li>
+        <li><a href="./0504/delegate_file.html">delegate_file</a></li>
+        <li><a href="./0504/effect.html">effect</a></li>
+        <li><a href="./0504/이벤트_핸들제거.html">이벤트_핸들제거</a></li>
     </ul>
 </div>
 
