--- a/web/index.html
+++ b/web/index.html
@@ -109,6 +109,13 @@
         <li><a href="./0504/이벤트_핸들제거.html">이벤트_핸들제거</a></li>
     </ul>
 </div>
+<div>
+    <h1>0506</h1>
+    <ul>
+        <li><a href="./0506/animation.html">animation</a></li>
+        <li><a href="./0506/bookList.html">bookList</a></li>
+    </ul>
+</div>
 
 </body>
 </html>
