--- a/web/index.html
+++ b/web/index.html
@@ -25,6 +25,10 @@
 <img src="./images/파댕이_마자마자.gif">
 <img src="./images/파댕이_물어보신분.gif">
 <img src="./images/파댕이_우왕.gif">
+<img src="./images/파댕이_무엇.gif">
+<img src="./images/파댕이_메롱.gif">
+<hr>
+
 <div>
     <h1>0423</h1>
     <ul>
@@ -114,6 +118,12 @@
     <ul>
         <li><a href="./0506/animation.html">animation</a></li>
         <li><a href="./0506/bookList.html">bookList</a></li>
+        <li><a href="./0506_Ajax/test.html">Ajax_test</a></li>
+    </ul>
+</div><div>
+    <h1>0507</h1>
+    <ul>
+        <li><a href="./0507_Ajax_JSON/datajson.html">Ajax_JSON_datajson</a></li>
     </ul>
 </div>
 
