--- a/web/index.html
+++ b/web/index.html
@@ -55,17 +55,17 @@
 
 </div>
 
- <div>
- <h1>0427</h1>
- <ul>
-	<li><a href="/jqpro/0427/폼상태필터selected.html">폼상태필터selected</a></li>
-	<li><a href="/jqpro/0427/form_val.html">form_val</a></li>
-	<li><a href="/jqpro/0427/visibility필터.html">visibility필터</a></li>
-	<li><a href="/jqpro/0427/visibility필터2.html">visiblility</a></li>
-	
+<div>
+    <h1>0427</h1>
+    <ul>
+        <li><a href="/jqpro/0427/폼상태필터selected.html">폼상태필터selected</a></li>
+        <li><a href="/jqpro/0427/form_val.html">form_val</a></li>
+        <li><a href="/jqpro/0427/visibility필터.html">visibility필터</a></li>
+        <li><a href="/jqpro/0427/visibility필터2.html">visiblility</a></li>
 
- </ul>
- </div>
+
+    </ul>
+</div>
 
 <div>
     <h1>0428</h1>
@@ -120,10 +120,19 @@
         <li><a href="./0506/bookList.html">bookList</a></li>
         <li><a href="./0506_Ajax/test.html">Ajax_test</a></li>
     </ul>
-</div><div>
+</div>
+<div>
     <h1>0507</h1>
     <ul>
-        <li><a href="./0507_Ajax_JSON/datajson.html">Ajax_JSON_datajson</a></li>
+        <li><a href="./0507_Ajax_JSON/datajson.html">datajson</a></li>
+        <li><a href="./0507_Ajax_JSON/member.html">member</a></li>
+    </ul>
+</div>
+<div>
+    <h1>0508</h1>
+    <ul>
+        <li><a href="./0508_Ajax/lprod.html">lprod</a></li>
+        <li><a href="./0508_Ajax/lprod2.html">lprod2</a></li>
     </ul>
 </div>
 
