--- a/web/index.html
+++ b/web/index.html
@@ -27,6 +27,7 @@
 <img src="./images/파댕이_우왕.gif">
 <img src="./images/파댕이_무엇.gif">
 <img src="./images/파댕이_메롱.gif">
+<h2>전영현</h2>
 <hr>
 
 <div>
@@ -108,7 +109,7 @@
     <ul>
         <li><a href="./0504/animation.html">animation</a></li>
         <li><a href="./0504/effect.html">effect</a></li>
-        <li><a href="./0504/delegate_file.html">delegate_file</a></li>
+        <li><a href="./0504/delegate_file.html">delegate_file   5개</a></li>
         <li><a href="./0504/effect.html">effect</a></li>
         <li><a href="./0504/이벤트_핸들제거.html">이벤트_핸들제거</a></li>
     </ul>
@@ -133,6 +134,13 @@
     <ul>
         <li><a href="./0508_Ajax/lprod.html">lprod</a></li>
         <li><a href="./0508_Ajax/lprod2.html">lprod2</a></li>
+    </ul>
+</div>
+
+<div>
+    <h1>0511</h1>
+    <ul>
+        <li><a href="./0511_Ajax/buyer.html">buyer</a></li>
     </ul>
 </div>
 
